--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^5.15.1",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "remix-auth": "^3.7.0",
+    "remix-auth-form": "^1.5.0",
+    "tsx": "^4.15.7",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
